feat: implement bulk word insertion and remove MapStruct
- Implement [WordController] with bulk insert endpoint for adding new words.
- Add `WordApplicationService` and domain models ([Word]`Card`) to support word operations.
- Configure OpenAPI documentation ([WordsOpenApiConfiguration], with asynchronous examples for validation errors.
- Remove MapStruct dependencies and refactor mappers (`UserMapper`, [CoreMapper],`WordRestMapper`) to manual Spring Components.
- Add integration tests ([WordControllerIT] covering validation scenarios for bulk insertion.
- Update [messages.properties] with user-friendly, argument-free validation messages.
- Refactor and move onboarding components to a dedicated `onboarding` package.